--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,24 @@
 .header-container {
   display: flex;
   text-align: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  background-color: rgb(84,40,90);
+  width: 100%;
+  position: fixed;
 }
 
+.header-container nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-container a {
+  margin: 0px 50px;
+  color: white;
+  padding: 10px;
+  transition: background-color .9s;
+}
+
+.nav-link:hover {
+  background-color: rgb(145, 79, 154);
+}
