--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,14 +1,13 @@
 #intro {
   display: flex;
-  text-align: center;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   color: white;
-  background-image: url('../images/fundo.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: rgb(56,9,66);
   height: 100vh;
 }
 
-#intro h1 {
-  margin-top: 40vh;
+#intro img {
+  width: 40%;
 }
