--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,11 @@
 #about {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  flex-direction: row;
+  align-items: center;
   text-align: center;
+  justify-content: space-around;
+}
+
+#about img {
+  width: 20%;
 }
