--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,11 +1,27 @@
 #about {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
   text-align: center;
+}
+
+#about div{
+  display: flex;
+  align-items: center;
+  text-align: left;
   justify-content: space-around;
 }
 
 #about img {
-  width: 20%;
+  width: 15%;
+  border-radius: 50px;
+}
+
+#about h2 {
+  font-size: 40px;
+  margin-bottom: 100px;
+}
+
+#about p {
+  font-size: 20px;
+  line-height: 120%;
 }
