--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,3 +1,23 @@
+#contacts {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#contacts h2 {
+  font-size: 40px;
+  margin-top: 100px;
+  margin-bottom: 70px;
+}
+
+#contacts div{
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  margin-bottom: 70px;
+  font-size: 20px;
+}
+
 #contacts a {
   color: white;
 }
