--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,8 +3,8 @@ body {
   font-family: fantasy;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(56,9,66);
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 code {
