adiciona carrossel e pequeno ajuste no header

--- a/src/styles/Techs.css
+++ b/src/styles/Techs.css
@@ -1,4 +1,56 @@
-#techs img {
-  width: 100px;
-  height: 100px;
+#techs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative; 
+  z-index: 1;
+}
+
+h2 {
+  margin-bottom: 10%;
+}
+
+.carousel {
+  perspective: 1000px;
+  transform: rotateX(20deg);
+  position: relative;
+  width: 300px;
+  height: 300px;
+  z-index: 1;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.carousel-item {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  backface-visibility: hidden;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  color: #333;
+  cursor: pointer;
+  user-select: none;
+  z-index: 1;
+}
+
+.arrow.left {
+  left: -80%;
+}
+
+.arrow.right {
+  right: -90%;
 }
