--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -5,14 +5,14 @@
   justify-content: flex-start;
   width: 90%;
   max-width: 800px;
-  height: 300px; /* Ajuste a altura conforme necessário */
+  height: 300px;
   margin: 50px auto;
   text-align: center;
   border: 2px solid #333;
   padding: 30px;
   border-radius: 10px;
-  position: relative; /* Necessário para posicionamento absoluto dos botões */
-  overflow: hidden; /* Garante que os botões não saiam da seção */
+  position: relative;
+  overflow: hidden;
 }
 
 #game h2 {
@@ -25,7 +25,7 @@
   display: flex;
   gap: 20px;
   margin-top: 20px;
-  position: relative; /* Necessário para posicionamento absoluto dos botões */
+  position: relative;
 }
 
 #game button {
@@ -42,5 +42,5 @@
 }
 
 #no_button {
-  position: absolute; /* Permite o posicionamento absoluto */
+  position: absolute;
 }
